Fix menu item alignment

--- a/app/assets/stylesheets/profile_menu.scss
+++ b/app/assets/stylesheets/profile_menu.scss
@@ -20,12 +20,11 @@
 .profile-menu-item {
   cursor: pointer;
   font-weight: 700;
-  padding: 6px 12px;
+  padding: 2px 12px;
   position: relative;
   color: #172b4d;
   font-size: 14px;
   font-family: 'Arial';
-  padding-top: 0;
   margin-top: -5px;
   min-width: 300px;
   &:hover {
